--- a/app/src/main/res/layout/content_enroll.xml
+++ b/app/src/main/res/layout/content_enroll.xml
@@ -37,6 +37,7 @@
             android:focusableInTouchMode="true">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/username_wrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
                 <EditText
@@ -51,6 +52,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/password_wrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
@@ -71,7 +73,8 @@
                 android:layout_height="wrap_content"
                 style="@style/AppTheme.Button.Primary"
                 android:layout_marginTop="16dp"
-                android:text="Register" />
+                android:text="Register"
+                android:onClick="onButtonSubmetClicked"/>
         </LinearLayout>
 
     </ScrollView>
