--- a/app/src/main/res/layout/content_error_process.xml
+++ b/app/src/main/res/layout/content_error_process.xml
@@ -10,24 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.uestc.lyreg.carsharing.OpenActivity"
-    tools:showIn="@layout/activity_open">
-
-    <TextView
-        android:textColor="#005685"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Open Door"
-        android:textSize="50sp"
-        android:id="@+id/open_title" />
+    tools:context="com.uestc.lyreg.carsharing.ErrorProcessActivity"
+    tools:showIn="@layout/activity_error_process">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/open_form"
+            android:id="@+id/error_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -36,13 +27,32 @@
             android:focusableInTouchMode="true">
 
             <Button
-                android:id="@+id/button_open"
+                android:id="@+id/button_error1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/AppTheme.Button.Primary"
                 android:layout_marginTop="16dp"
-                android:text="开门"
-                android:onClick="onButtonOpenClicked"/>
+                android:text="明文注册请求"
+                android:onClick="onButtonErrorClicked"/>
+
+            <Button
+                android:id="@+id/button_error2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/AppTheme.Button.Primary"
+                android:layout_marginTop="16dp"
+                android:text="模拟开门请求(错误用户证书序列号)"
+                android:onClick="onButtonErrorClicked"/>
+
+            <Button
+                android:id="@+id/button_error3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/AppTheme.Button.Primary"
+                android:layout_marginTop="16dp"
+                android:text="模拟开门指令(错误会话密钥)"
+                android:onClick="onButtonErrorClicked"/>
+
         </LinearLayout>
 
     </ScrollView>
